--- a/index.Rmd
+++ b/index.Rmd
@@ -28,7 +28,6 @@ library(tigris)
 library(sf)
 library(geosphere)
 library(RColorBrewer)
-library(acs)
 
 knitr::opts_chunk$set(cache=TRUE)  # cache the results for quick compiling
 ```
@@ -76,14 +75,14 @@ PRzips<-zctas(cb = FALSE, starts_with = NULL, year = 2010, state = "PR")%>%
 ```
 
 
-Join the Buffalo Shelter Data and the USdataframe by zip code, then assign coordinates using "Longitude" and "Latitude". You can now plot the general location of where across the United States homeless people were coming from based on the controid coordinates of their zip code origin.
+Join the Buffalo Shelter Data and the USdataframe by zip code, then use the sp package to assign coordinates using "Longitude" and "Latitude". You can now plot the general location of where across the United States homeless people were coming from based on the centroid coordinates of their zip code origin.
 ```{r}
 BufDataLL_US<-inner_join(Buffalo_Shelter_Data, USdataframe, by= "Zip")
 coordinates(BufDataLL_US)<-c("Longitude","Latitude")
 #View(BufDataLL_US)
 ```
 
-Complete the same process with the PRdata frame: Join the Buffalo Shelter Data and the PRdataframe by zip code, then assign coordinates using "Longitude" and "Latitude". You can now plot the general location of where within Puerto Rico homeless people were coming from based on the controid coordinates of their zip code origin.
+Complete the same process with the PRdata frame: Join the Buffalo Shelter Data and the PRdataframe by zip code, then use the sp package to assign coordinates using "Longitude" and "Latitude". You can now plot the general location of where within Puerto Rico homeless people were coming from based on the centroid coordinates of their zip code origin.
 ```{r}
 BufDataLL<-inner_join(Buffalo_Shelter_Data, PRdataframe, by= "Zip")
 coordinates(BufDataLL)<-c("Longitude","Latitude")
@@ -92,25 +91,34 @@ coordinates(BufDataLL)<-c("Longitude","Latitude")
 ```
 
 
-Summarize the data by the count of individuals coming from each of the different zip codes in the United States
+Summarize the data by the count of individuals coming from each of the different zip codes in the United States. You will create both centroid points and polygons with counts of individuals coming from each zip code. 
 ```{r, message=F}
+#Join the Buffalo Shelter Data to the US zip code data
 count_in_zips_US<-inner_join(Buffalo_Shelter_Data, USzips, by= c("Zip" = "ZCTA5CE10"))%>%group_by(Zip)%>%summarise(n=n())
 #count_in_zips_US
+
+#join the newly created data frame to the USdata frame to get the coodinates of the zip codes
 count_in_zips_points_US<-left_join(count_in_zips_US,USdataframe,by= "Zip")
+
+#set the coordinates for the centroid points
 coordinates(count_in_zips_points_US)<-c("Longitude","Latitude")
+
+#convert to sf
 st_as_sf(count_in_zips_points_US)
 #View(count_in_zips_points_US)
 #plot(count_in_zips_points_US)
 
+
+#join the Buffalo Shelter Data to the USzips polygon to create polygons with counts of the number of individuals coming from each zip code
 count_in_zips_polygons_US<-inner_join(Buffalo_Shelter_Data, USzips, by= c("Zip" = "ZCTA5CE10"))%>%st_as_sf()%>%group_by(Zip)%>%summarise(n=n())
 #View(count_in_zips_polygons_US)
 #plot(count_in_zips_polygons_US)
 ```
 
 
-Summarize the data by the count of individuals coming from each of the different zip codes in Puerto Rico.
+Summarize the data by the count of individuals coming from each of the different zip codes in Puerto Rico. You will create both centroid points and polygons with counts of individuals coming from each zip code.
 ```{r}
-#create count_in_zips, which is an inner join of the Buffalo Shelter Data and the PRzips sf object, then group by zip code and summarize
+#Join the Buffalo Shelter Data to the Puerto Rico zip code data
 count_in_zips<-inner_join(Buffalo_Shelter_Data, PRzips, by= c("Zip" = "ZCTA5CE10"))%>%group_by(Zip)%>%summarise(n=n())
 #count_in_zips
 
@@ -122,7 +130,7 @@ st_as_sf(count_in_zips_points)
 #head(count_in_zips_points)
 #plot(count_in_zips_points)
 
-#create count_in_zips_polygons, which is the count_in_zips dataframe set as a sf
+#create count_in_zips_polygons, which is the count_in_zips dataframe set as a sf to create polygons with the counts of people coming from each zip code in Puerto Rico
 count_in_zips_polygons<-inner_join(Buffalo_Shelter_Data, PRzips, by= c("Zip" = "ZCTA5CE10"))%>%st_as_sf()%>%group_by(Zip)%>%summarise(n=n())
 #plot
 #plot(count_in_zips_polygons)
@@ -153,7 +161,11 @@ points_in_US<- data.frame(count_in_zips_points_US)
 xlim <- c(-160, -55.5)
 ylim <- c(12, 50)
 BuffaloCoordinates=as.matrix(geocode("Buffalo, NY"))
+
+#use the map package to create a map of the area of interest
 map("world", col="#f1f1f1", fill=TRUE, bg="white", lwd=0.2, xlim=xlim, ylim=ylim)
+
+#use geosphere package to create great circle lines between points of origin and Buffalo, NY
 for (j in 1:length(points_in_US$n)) {
   inter <- gcIntermediate(c(points_in_US[j,]$Longitude, points_in_US[j,]$Latitude), BuffaloCoordinates, n=100, addStartEnd=TRUE)
   
@@ -175,7 +187,10 @@ BuffaloCoordinates=as.matrix(geocode("Buffalo, NY"))
 pal <- colorRampPalette(c("#f2f2f2", "black"))
 colors <- pal(100)
 
+#use the map package to create a map of the area of interest
 map("world", col="#f1f1f1", fill=TRUE, bg="white", lwd=0.2, xlim=xlim, ylim=ylim)
+
+#use geosphere package to create great circle lines between points of origin and Buffalo, NY
 for (j in 1:length(points$n)) {
   inter <- gcIntermediate(c(points[j,]$Longitude, points[j,]$Latitude), BuffaloCoordinates, n=100, addStartEnd=TRUE)
   
@@ -190,7 +205,7 @@ for (j in 1:length(points$n)) {
 
 Choropleth map of density (number of people coming to Buffalo from each Puerto Rican zip code)
 ```{r}
-###choropleth map of density
+###use ggplot to create a choropleth map of density
 ggplot(PRzips)+
   geom_sf(lwd=0.2,fill="#f0f0f0")+
   geom_sf(data=count_in_zips_polygons, aes(fill = n), col="transparent") +
