--- a/index.Rmd
+++ b/index.Rmd
@@ -10,7 +10,7 @@ Homeless individuals are among the most marginalized populations of society. Hom
 
 
 # Materials and methods
-
+### Load Packages
 Load any required packages in a code chunk (you may need to install some packages):
   
 ```{r, message=F, results=F, warning=F}
@@ -32,6 +32,7 @@ library(RColorBrewer)
 knitr::opts_chunk$set(cache=TRUE)  # cache the results for quick compiling
 ```
 
+###Load Buffalo Data Set
 Read in the anonymized data set provided by the Western New York Homeless Alliance
 ```{r}
 Buffalo_Shelter_Data <- read_csv("~/Desktop/Adam's Class/*final project/Buffalo Shelter Data (original).csv")
@@ -42,8 +43,7 @@ Use the zipcode package to clean the zipcodes in the Buffalo Shelter Data CSV. T
 clean.zipcodes(Buffalo_Shelter_Data)
 ```
 
-
-
+###Zip Code Data Frames
 Use the zipcode package to create two data frames: one with the zipcodes for all of the United States, and other with zipcodes just for Puerto Rico. Rename the column heads so that they can later be more easily joined to the Buffalo Shelter Data.
 ```{r}
 data("zipcode")
@@ -59,7 +59,7 @@ head(PRdataframe)
 ```
 
 
-
+###Zip Code Boundaries
 Use the tigris package to download the physical boundaries for all United States zip codes and convert to sf. Create an sf object for all United States zip codes, then filter to create an sf object for only Puerto Rico zip codes
 ```{r, message=F}
 #run the following line of code only once to download the boundary data -- it may take awhile
@@ -74,13 +74,14 @@ PRzips<-zctas(cb = FALSE, starts_with = NULL, year = 2010, state = "PR")%>%
 ##PRzips is the sf object with the physical boundaries for PR zip codes
 ```
 
-
+###Geocoding Buffalo Shelter Data
 Join the Buffalo Shelter Data and the USdataframe by zip code, then use the sp package to assign coordinates using "Longitude" and "Latitude". You can now plot the general location of where across the United States homeless people were coming from based on the centroid coordinates of their zip code origin.
 ```{r}
 BufDataLL_US<-inner_join(Buffalo_Shelter_Data, USdataframe, by= "Zip")
 coordinates(BufDataLL_US)<-c("Longitude","Latitude")
 #View(BufDataLL_US)
 ```
+
 
 Complete the same process with the PRdata frame: Join the Buffalo Shelter Data and the PRdataframe by zip code, then use the sp package to assign coordinates using "Longitude" and "Latitude". You can now plot the general location of where within Puerto Rico homeless people were coming from based on the centroid coordinates of their zip code origin.
 ```{r}
@@ -91,6 +92,8 @@ coordinates(BufDataLL)<-c("Longitude","Latitude")
 ```
 
 
+###Summarizing the total counts from each zip code
+####Summarizing from origin in all of the United States
 Summarize the data by the count of individuals coming from each of the different zip codes in the United States. You will create both centroid points and polygons with counts of individuals coming from each zip code. 
 ```{r, message=F}
 #Join the Buffalo Shelter Data to the US zip code data
@@ -105,17 +108,15 @@ coordinates(count_in_zips_points_US)<-c("Longitude","Latitude")
 
 #convert to sf
 st_as_sf(count_in_zips_points_US)
-#View(count_in_zips_points_US)
 #plot(count_in_zips_points_US)
 
 
 #join the Buffalo Shelter Data to the USzips polygon to create polygons with counts of the number of individuals coming from each zip code
 count_in_zips_polygons_US<-inner_join(Buffalo_Shelter_Data, USzips, by= c("Zip" = "ZCTA5CE10"))%>%st_as_sf()%>%group_by(Zip)%>%summarise(n=n())
-#View(count_in_zips_polygons_US)
 #plot(count_in_zips_polygons_US)
 ```
 
-
+####Summarizing from origin only in Puerto Rico
 Summarize the data by the count of individuals coming from each of the different zip codes in Puerto Rico. You will create both centroid points and polygons with counts of individuals coming from each zip code.
 ```{r}
 #Join the Buffalo Shelter Data to the Puerto Rico zip code data
@@ -124,45 +125,42 @@ count_in_zips<-inner_join(Buffalo_Shelter_Data, PRzips, by= c("Zip" = "ZCTA5CE10
 
 #create count_in_zips_points, which is a left join of the count_in_zips data frame that you just created and the PRdataframe that has the locations of the zip codes
 count_in_zips_points<-left_join(count_in_zips,PRdataframe,by= "Zip")
+
 #set the coordinates
 coordinates(count_in_zips_points)<-c("Longitude","Latitude")
 st_as_sf(count_in_zips_points)
-#head(count_in_zips_points)
 #plot(count_in_zips_points)
 
 #create count_in_zips_polygons, which is the count_in_zips dataframe set as a sf to create polygons with the counts of people coming from each zip code in Puerto Rico
 count_in_zips_polygons<-inner_join(Buffalo_Shelter_Data, PRzips, by= c("Zip" = "ZCTA5CE10"))%>%st_as_sf()%>%group_by(Zip)%>%summarise(n=n())
-#plot
 #plot(count_in_zips_polygons)
 
 ```
 
-
+###Income For Puerto Rico Zip Codes
 Use the tidycensus package to get the household income data from the US Census Bureau (census.gov). We will download the income data for each zip code (table B19001_001E is the average household income in the past 12 months)
 ```{r}
 IncomeZipCodeData <-get_acs(geography = "zcta", variables = "B19001_001E")
-#View(IncomeZipCodeData)
 ```
 
 Join IncomeZipCodeData with PRzips to make PR zips income file
 ```{r}
 PRzipsIncome<-left_join(IncomeZipCodeData, PRzips, by= c("GEOID" = "ZCTA5CE10"))
-
-#head(PRzipsIncome)
 ```
 
 
 # Results
 
+###Mapping the Origin
 
 Map of locations across the United States are people originate from before becoming homeless in Western New York
 ```{r, message=F}
 points_in_US<- data.frame(count_in_zips_points_US)
+
+#use the map package to create a map of the area of interest
 xlim <- c(-160, -55.5)
 ylim <- c(12, 50)
 BuffaloCoordinates=as.matrix(geocode("Buffalo, NY"))
-
-#use the map package to create a map of the area of interest
 map("world", col="#f1f1f1", fill=TRUE, bg="white", lwd=0.2, xlim=xlim, ylim=ylim)
 
 #use geosphere package to create great circle lines between points of origin and Buffalo, NY
@@ -177,17 +175,20 @@ for (j in 1:length(points_in_US$n)) {
 As we can see, there are a number of lines originating in Puerto Rico. The next section will specifically explore the phenomenon of people coming from Puerto Rico before becoming homeless in Western New York...
 
 
+###Puerto Rico to Buffalo
+
+####Zip Code Density
 Zoomed-in map of migration to Buffalo from Puerto Rico along great circle lines, weighted by the number from each place (darker = more people)
 ```{r}
 points <- data.frame(count_in_zips_points)
+
+#use the map package to create a map of the area of interest
 xlim <- c(-90, -60)
 ylim <- c(18, 45)
 BuffaloCoordinates=as.matrix(geocode("Buffalo, NY"))
 
 pal <- colorRampPalette(c("#f2f2f2", "black"))
 colors <- pal(100)
-
-#use the map package to create a map of the area of interest
 map("world", col="#f1f1f1", fill=TRUE, bg="white", lwd=0.2, xlim=xlim, ylim=ylim)
 
 #use geosphere package to create great circle lines between points of origin and Buffalo, NY
@@ -199,7 +200,6 @@ for (j in 1:length(points$n)) {
   lines(inter, col=colors[colindex], lwd=0.8)
 }
 ```
-
 
 
 
@@ -226,7 +226,7 @@ ggplot(PRzips)+
 ```
 
 
-
+####Thinking about Income
 For fun, lets explore income of Puerto Rico by zip code.
 ```{r, message=F, warning=F}
 ggplot(PRzipsIncome)+
