--- a/index.Rmd
+++ b/index.Rmd
@@ -153,21 +153,23 @@ PRzipsIncome<-left_join(IncomeZipCodeData, PRzips, by= c("GEOID" = "ZCTA5CE10"))
 
 ###Mapping the Origin
 
-Map of locations across the United States are people originate from before becoming homeless in Western New York
+The following map shows the locations across the United States that people originate from before becoming homeless in Western New York
 ```{r, message=F}
+
+#set the points of origin ("points_in_US") and the final destination in Buffalo ("BuffaloCoordinates")
 points_in_US<- data.frame(count_in_zips_points_US)
+BuffaloCoordinates=as.matrix(geocode("Buffalo, NY"))
 
 #use the map package to create a map of the area of interest
 xlim <- c(-160, -55.5)
 ylim <- c(12, 50)
-BuffaloCoordinates=as.matrix(geocode("Buffalo, NY"))
 map("world", col="#f1f1f1", fill=TRUE, bg="white", lwd=0.2, xlim=xlim, ylim=ylim)
 
 #use geosphere package to create great circle lines between points of origin and Buffalo, NY
 for (j in 1:length(points_in_US$n)) {
   inter <- gcIntermediate(c(points_in_US[j,]$Longitude, points_in_US[j,]$Latitude), BuffaloCoordinates, n=100, addStartEnd=TRUE)
   
-  lines(inter, col="black", lwd=0.8)
+  lines(inter, col="black", lwd=0.6)
 }
 ```
 
@@ -178,32 +180,34 @@ As we can see, there are a number of lines originating in Puerto Rico. The next 
 ###Puerto Rico to Buffalo
 
 ####Zip Code Density
-Zoomed-in map of migration to Buffalo from Puerto Rico along great circle lines, weighted by the number from each place (darker = more people)
+Zoomed-in map of migration to Buffalo from Puerto Rico along great circle lines, weighted by the number from each place (the darker red the color, the more people coming from the zip code)
 ```{r}
+#set the points of origin ("points") and the final destination in Buffalo ("BuffaloCoordinates")
 points <- data.frame(count_in_zips_points)
+BuffaloCoordinates=as.matrix(geocode("Buffalo, NY"))
 
 #use the map package to create a map of the area of interest
 xlim <- c(-90, -60)
 ylim <- c(18, 45)
-BuffaloCoordinates=as.matrix(geocode("Buffalo, NY"))
-
-pal <- colorRampPalette(c("#f2f2f2", "black"))
-colors <- pal(100)
 map("world", col="#f1f1f1", fill=TRUE, bg="white", lwd=0.2, xlim=xlim, ylim=ylim)
+
+#create a color ramp to show the number of people coming from each zip code of origin
+prettypal<-colorRampPalette(c("#ffeda0", "red"))
+prettycolors <- prettypal(max(points$n))
 
 #use geosphere package to create great circle lines between points of origin and Buffalo, NY
 for (j in 1:length(points$n)) {
   inter <- gcIntermediate(c(points[j,]$Longitude, points[j,]$Latitude), BuffaloCoordinates, n=100, addStartEnd=TRUE)
   
-  colindex <- round( (points[j,]$n / 7) * length(colors) )
+  colindex <- (points[j,]$n)
   
-  lines(inter, col=colors[colindex], lwd=0.8)
+  lines(inter, col=prettycolors[colindex], lwd=0.8)
 }
 ```
 
 
 
-Choropleth map of density (number of people coming to Buffalo from each Puerto Rican zip code)
+Create a choropleth map of density (number of people coming to Buffalo from each Puerto Rican zip code)
 ```{r}
 ###use ggplot to create a choropleth map of density
 ggplot(PRzips)+
@@ -214,11 +218,10 @@ ggplot(PRzips)+
 ```
 
 
-Map of centroid dots of location of origin; color and size indicate the number coming from that place
+There are other ways of visualizing this data. For example, the following map will create centroid dots of the zip code of origin, with size indicating the number of individuals coming from that place
 ```{r, message=F}
 #create points as data frame to use in ggplot
 points <- data.frame(count_in_zips_points)
-
 
 #plot
 ggplot(PRzips)+
