--- a/index.Rmd
+++ b/index.Rmd
@@ -32,54 +32,61 @@ library(RColorBrewer)
 knitr::opts_chunk$set(cache=TRUE)  # cache the results for quick compiling
 ```
 
-###Load Buffalo Data Set
-Read in the anonymized data set provided by the Western New York Homeless Alliance
+###Load Buffalo Data Set  
+
+Read in the anonymized data set provided by the Western New York Homeless Alliance (due to the sensitive nature of this file, it is stored locally on my own computer and will not be able to be downloaded)
 ```{r}
 Buffalo_Shelter_Data <- read_csv("~/Desktop/Adam's Class/*final project/Buffalo Shelter Data (original).csv")
 ```
 
-Use the zipcode package to clean the zipcodes in the Buffalo Shelter Data CSV. This fixes the entries with "incomplete" zip codes that were thrown out of the data set so that they are useable.
+Use the zipcode package to clean the zipcodes in the Buffalo Shelter Data CSV. This fixes the entries with "incomplete" zip codes that were thrown out of the data set so that they are useable.  
 ```{r}
 clean.zipcodes(Buffalo_Shelter_Data)
 ```
 
-###Zip Code Data Frames
-Use the zipcode package to create two data frames: one with the zipcodes for all of the United States, and other with zipcodes just for Puerto Rico. Rename the column heads so that they can later be more easily joined to the Buffalo Shelter Data.
-```{r}
+###Zip Code Data Frames  
+
+Use the zipcode package to create two data frames: one with the zipcodes for all of the United States, and other with zipcodes just for Puerto Rico. Rename the column heads so that they can later be more easily joined to the Buffalo Shelter Data to create points marking the origin of individuals who become homeless in Buffalo  
+```{r, message=F, warning=F, results=F}
+#download the zip code data for the whole of the United States
 data("zipcode")
+
+#rename the head
 names<-c("Zip","City","State","Latitude","Longitude")
 colnames(zipcode, do.NULL = TRUE, prefix = "col")
 colnames(zipcode)<-names
+
+#rename
 USdataframe=zipcode
 ##USdataframe is the data frame with zip codes for all of the United States. You can filter to only have Puerto Rico
 
 PRdataframe<-filter(zipcode,State=="PR")
-head(PRdataframe)
 ##PRdata frame is the data frame with zip codes for just Puerto Rico
+head(PRdataframe)
 ```
 
 
 ###Zip Code Boundaries
-Use the tigris package to download the physical boundaries for all United States zip codes and convert to sf. Create an sf object for all United States zip codes, then filter to create an sf object for only Puerto Rico zip codes
+
+Use the tigris package to download the physical boundaries for all zip codes in Puerto Rico and convert to sf. This will be used later to create choropleth maps of Puerto Rico.
+*Note: this process could be done for the whole of the United States simply by leaving the 'state="PR"' section out of the code, but the focus of the project is the migration specifically from Puerto Rico and we will not be creating a choropleth map of the whole of the United States*
 ```{r, message=F}
 #run the following line of code only once to download the boundary data -- it may take awhile
-#zips<-zctas(cb = FALSE, starts_with = NULL, year = 2010, state = NULL)
 options(tigris_use_cache = TRUE)
-USzips<-zctas(cb = FALSE, starts_with = NULL, year = 2010)%>%
-  st_as_sf()
-##USzips is the sf object with the physical boundaries for all US zip codes
-
 PRzips<-zctas(cb = FALSE, starts_with = NULL, year = 2010, state = "PR")%>%
   st_as_sf()
 ##PRzips is the sf object with the physical boundaries for PR zip codes
 ```
 
-###Geocoding Buffalo Shelter Data
-Join the Buffalo Shelter Data and the USdataframe by zip code, then use the sp package to assign coordinates using "Longitude" and "Latitude". You can now plot the general location of where across the United States homeless people were coming from based on the centroid coordinates of their zip code origin.
+###Geocoding Buffalo Shelter Data  
+
+Join the Buffalo Shelter Data and the USdataframe by zip code, then use the sp package to assign coordinates using "Longitude" and "Latitude". You can now plot the general location of where across the United States homeless people were coming from based on the centroid coordinates of their zip code origin. 
+*Note: multiple people originating from the same zip code would be visualized as a single point*
+
 ```{r}
 BufDataLL_US<-inner_join(Buffalo_Shelter_Data, USdataframe, by= "Zip")
 coordinates(BufDataLL_US)<-c("Longitude","Latitude")
-#View(BufDataLL_US)
+#plot(BufDataLL_US)
 ```
 
 
@@ -87,20 +94,20 @@ Complete the same process with the PRdata frame: Join the Buffalo Shelter Data a
 ```{r}
 BufDataLL<-inner_join(Buffalo_Shelter_Data, PRdataframe, by= "Zip")
 coordinates(BufDataLL)<-c("Longitude","Latitude")
-#View(BufDataLL)
 #Plot(BufDataLL)
 ```
 
-
+  
 ###Summarizing the total counts from each zip code
 ####Summarizing from origin in all of the United States
-Summarize the data by the count of individuals coming from each of the different zip codes in the United States. You will create both centroid points and polygons with counts of individuals coming from each zip code. 
-```{r, message=F}
-#Join the Buffalo Shelter Data to the US zip code data
-count_in_zips_US<-inner_join(Buffalo_Shelter_Data, USzips, by= c("Zip" = "ZCTA5CE10"))%>%group_by(Zip)%>%summarise(n=n())
-#count_in_zips_US
+Summarize the data by the count of individuals coming from each of the different zip codes in the United States. You will create centroid points of the zip codes that now have an "n" value of the number of people coming from each given zip code.
 
-#join the newly created data frame to the USdata frame to get the coodinates of the zip codes
+#####US origins represented as centroid points
+```{r, message=F, results=F, warning=F}
+#Join the Buffalo Shelter Data to the US zip code data
+count_in_zips_US<-inner_join(Buffalo_Shelter_Data, USdataframe, by= "Zip")%>%group_by(Zip)%>%summarise(n=n())
+
+#join the newly created data frame with the number of individuals coming from each zip code back to the to the USdataframe to get the coodinates of the zip codes
 count_in_zips_points_US<-left_join(count_in_zips_US,USdataframe,by= "Zip")
 
 #set the coordinates for the centroid points
@@ -108,20 +115,17 @@ coordinates(count_in_zips_points_US)<-c("Longitude","Latitude")
 
 #convert to sf
 st_as_sf(count_in_zips_points_US)
+
 #plot(count_in_zips_points_US)
-
-
-#join the Buffalo Shelter Data to the USzips polygon to create polygons with counts of the number of individuals coming from each zip code
-count_in_zips_polygons_US<-inner_join(Buffalo_Shelter_Data, USzips, by= c("Zip" = "ZCTA5CE10"))%>%st_as_sf()%>%group_by(Zip)%>%summarise(n=n())
-#plot(count_in_zips_polygons_US)
 ```
 
 ####Summarizing from origin only in Puerto Rico
-Summarize the data by the count of individuals coming from each of the different zip codes in Puerto Rico. You will create both centroid points and polygons with counts of individuals coming from each zip code.
-```{r}
+Summarize the data by the count of individuals coming from each of the different zip codes in Puerto Rico. You will create both centroid points and polygons with counts of individuals coming from each zip code for the Puerto Rico data. 
+
+####*Puerto Rico data represented as centroid points*
+```{r, message=F, warning=F, results=F}
 #Join the Buffalo Shelter Data to the Puerto Rico zip code data
 count_in_zips<-inner_join(Buffalo_Shelter_Data, PRzips, by= c("Zip" = "ZCTA5CE10"))%>%group_by(Zip)%>%summarise(n=n())
-#count_in_zips
 
 #create count_in_zips_points, which is a left join of the count_in_zips data frame that you just created and the PRdataframe that has the locations of the zip codes
 count_in_zips_points<-left_join(count_in_zips,PRdataframe,by= "Zip")
@@ -130,15 +134,18 @@ count_in_zips_points<-left_join(count_in_zips,PRdataframe,by= "Zip")
 coordinates(count_in_zips_points)<-c("Longitude","Latitude")
 st_as_sf(count_in_zips_points)
 #plot(count_in_zips_points)
+```
 
-#create count_in_zips_polygons, which is the count_in_zips dataframe set as a sf to create polygons with the counts of people coming from each zip code in Puerto Rico
+####*Puerto Rico data represented as polygons*
+```{r, message=F, warning=F, results=F}
+#create count_in_zips_polygons, which is the Puerto Rico zip code polygons joined with the Buffalo shelter data of people coming from each zip code in Puerto Rico, then summarized to give the total count originating from each zip code
 count_in_zips_polygons<-inner_join(Buffalo_Shelter_Data, PRzips, by= c("Zip" = "ZCTA5CE10"))%>%st_as_sf()%>%group_by(Zip)%>%summarise(n=n())
 #plot(count_in_zips_polygons)
 
 ```
 
 ###Income For Puerto Rico Zip Codes
-Use the tidycensus package to get the household income data from the US Census Bureau (census.gov). We will download the income data for each zip code (table B19001_001E is the average household income in the past 12 months)
+Since homelessness is often related to income levels, we are interested in the average income in each zip code of origin in Puerto Rico. Use the tidycensus package to get the household income data from the US Census Bureau (census.gov). We will download the income data for each zip code (table B19001_001E is the average household income in the past 12 months)
 ```{r}
 IncomeZipCodeData <-get_acs(geography = "zcta", variables = "B19001_001E")
 ```
@@ -147,8 +154,8 @@ Join IncomeZipCodeData with PRzips to make PR zips income file
 ```{r}
 PRzipsIncome<-left_join(IncomeZipCodeData, PRzips, by= c("GEOID" = "ZCTA5CE10"))
 ```
-
-
+  
+  
 # Results
 
 ###Mapping the Origin
@@ -174,14 +181,13 @@ for (j in 1:length(points_in_US$n)) {
 ```
 
 
-As we can see, there are a number of lines originating in Puerto Rico. The next section will specifically explore the phenomenon of people coming from Puerto Rico before becoming homeless in Western New York...
+As we can see, there are a number of lines originating in Puerto Rico. The next section will specifically explore the phenomenon of people coming from Puerto Rico before becoming homeless in Western New York...  
 
 
-###Puerto Rico to Buffalo
+###Puerto Rico to Buffalo  
 
-####Zip Code Density
-Zoomed-in map of migration to Buffalo from Puerto Rico along great circle lines, weighted by the number from each place (the darker red the color, the more people coming from the zip code)
-```{r}
+Let's focus on the migration from Puerto Rico to Buffalo. We can zoom in on the map of migration to Buffalo from Puerto Rico along great circle lines, and color code the lines by the number of people coming from each place (the darker red the color, the more people coming from the zip code)
+```{r, message=F, warning=F, results=F}
 #set the points of origin ("points") and the final destination in Buffalo ("BuffaloCoordinates")
 points <- data.frame(count_in_zips_points)
 BuffaloCoordinates=as.matrix(geocode("Buffalo, NY"))
@@ -206,8 +212,8 @@ for (j in 1:length(points$n)) {
 ```
 
 
-
-Create a choropleth map of density (number of people coming to Buffalo from each Puerto Rican zip code)
+####Zip Code Density
+It is difficult to see *where* on the island of Puerto Rico people are coming from. Let's create a choropleth map of density (number of people coming to Buffalo from each Puerto Rican zip code) to make it evident where on the island more people are coming from
 ```{r}
 ###use ggplot to create a choropleth map of density
 ggplot(PRzips)+
@@ -218,30 +224,16 @@ ggplot(PRzips)+
 ```
 
 
-There are other ways of visualizing this data. For example, the following map will create centroid dots of the zip code of origin, with size indicating the number of individuals coming from that place
-```{r, message=F}
-#create points as data frame to use in ggplot
-points <- data.frame(count_in_zips_points)
-
-#plot
-ggplot(PRzips)+
-  geom_sf(lwd=0.2,fill="#f0f0f0")+
-  geom_point(data=points, colour="red", alpha=.7, aes(x=Longitude, y=Latitude, size=n))+
-  labs(size="Number People")
-```
-
-
 ####Thinking about Income
-For fun, lets explore income of Puerto Rico by zip code.
+For fun, lets use the average income data set that we downloaded to explore the income of Puerto Rico by zip code.
 ```{r, message=F, warning=F}
 ggplot(PRzipsIncome)+
 geom_sf(data=PRzipsIncome, aes(fill = estimate), col="transparent") +
 scale_fill_gradient(low = "white", high = "dark green")+
 labs(fill="Estimated Average Income ($)")
 ```
-
-
-This can then be overlaid with the number of people coming from each zip code.
+  
+From this map of income, we can see that there is a great deal of variation in average income by zip code on the island of Puerto Rico. We can now overlay this map with the number of people coming from each zip code. The number of people coming from each zip code will be represented as proportional symbols, with larger dots indicating more people originating from a given zip code. 
 ```{r, warning=F}
 ggplot(PRzipsIncome)+
 geom_sf(data=PRzipsIncome, aes(fill = estimate),col="transparent") +
@@ -257,13 +249,15 @@ labs(size="Number People")
 
 # Conclusions
 
-Looking at the final map, which overlays the number of individuals from Puerto Rican zip codes with the average household income of the zip code, I was surprised to see that there does not seem to be a strong relationship between income and the number of individuals orginating from that zip code. The total sample size of people coming from Puerto Rico was too small to run any kind of meaningful statistical regression, but a visual examination shows that the zip codes of origin were not necessarily the ones with the lowest average annual incomedata.
+Looking at the final map, which overlays the number of individuals from Puerto Rican zip codes with the average household income of the zip code, I was surprised to see that there does not seem to be a strong relationship between income and the number of individuals orginating from that zip code. It is certainly worth noting that the data is not normalized and there could be many, many explanations for this apparently lack of relationship: for example, the zip codes with lower average incomes may have relatively small populations compared to wealthier zip codes, so it may be possible that people are simply coming from more populous regions. It also may be possible that people in relatively poorer zip codes may not have the resources at their disposal to make their way to Buffalo, as travel is expensive. These are just potential explanations, but they are worth considering. It is also important to note that all of these speculations are drawn merely from visual analysis, as the total sample size of people coming from Puerto Rico was too small to run any kind of meaningful statistical regression.  
 
 On a broader scale, this project has successfully shown where people are coming from before becoming homeless in Western New York. My experience in developing this project has also demonstrated how easy it might be to use R to visualize migration data and the origins of homeless individuals. My ultimate hope is to compare this current data set with similar data sets from other Rust Belt cities, including Cleveland, OH, and Pittsburgh, PA to see if the phenomenon of homeless individuals originating in Puerto Rico extends beyond Buffalo and the Western New York region. This project will be an invaluable tool, as the code for this project could easily be run with other data sets substituted for the Buffalo Shelter Data.
 
 
 
 # References
-* The homelessness data set used in this project was generously provided by The Homelessness Alliance of Western New York
-* The zip code polygons and the zip code income data were downloaded from the US Census Bureau (census.gov)
+#####The homelessness data set used in this project was generously provided by The Homelessness Alliance of Western New York
+#####The zip code polygons and the zip code income data were downloaded from the US Census Bureau (census.gov)
+  + U.S. Census Bureau (2016). US Cartography Boundary Shapefiles - ZIP code tabulation areas (ZCTAs). Retrieved from https://www.census.gov/geo/maps-data/data/cbf/cbf_zcta.html
+  + U.S. Census Bureau (2015). Household Income In The Past 12 Monts (in 2015 Inflation-Adjusted Dollars), 2015 American Community Survey 1-year estimate. Retrieved from https://factfinder.census.gov/faces/tableservices/jsf/pages/productview.xhtml?src=bkmk
 
